# Capstone-Microsoft-SoW

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile.ingestion  Dockerfile.neo4j  Dockerfile.postgres  INFRASTRUCTURE.md  PAPER_INTROSPECTION_REPORT.md  README.md  azure.yaml  docker-compose.yml  package-lock.json  ruff.toml
backend/: Dockerfile  README.md  auth.py  config.py  conftest.py  database.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  status.py  status_utils.py  validators.py
backend/content_templates/: agile-sprint-delivery.json  cloud-adoption.json  sure-step-365.json  waterfall.json
backend/routers/: ai.py  attachments.py  audit.py  auth.py  coa.py  finalize.py  permissions.py  review.py  roles.py  rules.py  sow.py  sow_comments.py  sow_extraction.py  sow_roles.py  users.py  workflow.py
backend/seeds/: microsoft_workflow.py
backend/services/: ai.py  workflow_engine.py
backend/tests/: test_api.py  test_extraction_endpoints.py  test_schema_proposals.py
backend/tests/unit/: test_auth.py  test_document_text.py  test_section_schemas.py  test_status_utils.py  test_validators.py  test_workflow_engine.py
backend/utils/: __init__.py  db_helpers.py  document_text.py  esap.py  role_labels.py  section_schemas.py  sow_text.py
ml/: .dockerignore  .env.example  Dockerfile  api.py  ingest_async.py  llm_gen.py  main.py  main_new.py  pyproject.toml
ml/kg_data_gen/: README.md  config.py  llm_client.py  requirements.txt  run.py
ml/kg_data_gen/generators/: budget.py  budget_actuals.py  closeout.py  deal_overview.py  staffing_actuals.py  staffing_plan.py  status_reports.py
ml/kg_data_gen/output/: budget.csv  project_closeout.csv  staffing_plan.csv  (+2 more)
ml/sow_kg/: assist.py  assist_cli.py  assist_router.py  db.py  deal_cli.py  deal_queries.py  deal_router.py  enrich.py  extract.py  graph_rag.py  graphrag.py  graphrag_load_deal_context.py  ingest.py  ingest_async.py  ingest_csv.py  ingest_deal_data.py  ingest_json.py  ingest_markdown.py  llm_client.py  proposal_cli.py  proposal_eval.py  queries.py  schema_evolution.py  sow-kg-schema.html
(+209 files in other folders)
